--- a/nc-daily-newsy/package.json
+++ b/nc-daily-newsy/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.28",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
@@ -15,6 +16,7 @@
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
     "react-scripts": "3.4.0",
+    "react-spinners": "^0.8.1",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
